--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>实验</title>
+	<style type="text/css">
+	body { background-image: url(./images/t.jpg)}
+	p {color:red}
+         
+</style>
+}
 </head>
 <body>
 <p>ssadsadsadasdadasd</p>
