--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 	<title>实验</title>
 	<style type="text/css">
-	body { background-image: url(./images/t.jpg)}
-	p {color:red}
+	body { background-image: url(./images/t.jpg);
+           background-size: 100%  100%;
+           height: 100%;
+	}
+	html {height: 100%;}
+	p {color:red;}
          
 </style>
-}
+
 </head>
 <body>
 <p>ssadsadsadasdadasd</p>
