--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <p>ssadsadsadasdadasd</p>
 <h1>sssssssss</h1>
 <img src="./images/t.jpg"/>
+<!-- <audio src="audio/bgm.mp3"  autoplay="autoplay"> -->
+	
+</audio>
 
 
 
