--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>ssadsadsadasdadasd</p>
 <h1>sssssssss</h1>
 <img src="./images/t.jpg"/>
-<audio src="audio/bgm.mp3" controls="controls" autoplay="autoplay">
+<audio src="audio/bgm.mp3"  autoplay="autoplay">
 	
 </audio>
 
