--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </body>
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript">
+	$(document).ready(function(){
 		$(".dian li").mouseover(function(){
 			clearInterval(timeplay);
 			index=$(this).index();
@@ -99,6 +100,6 @@
 			// time=index;
 			shijian();
 			});		
-	
+	})
 </script>
 </html>
