--- a/index(2).html
+++ b/index(2).html
@@ -42,6 +42,7 @@
 </body>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript">
+		$(document).ready(function(){
 		$(".biaoji li").mouseover(function(){
 			clearInterval(timeplay);
 			index=$(this).index();
@@ -109,6 +110,6 @@
 			// time=index;
 			shijian();
 			});		
-
+})
 	</script>
 </html>
